# strawberry-django-hasura

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRACT.md  README.md  ROADMAP.md  pyproject.toml
.agents/: hasura_resource-owner-map.md
.github/workflows/: publish.yml
examples/: README.md  demo_schema.py  server.py
examples/refine-client/: README.md  client_test.cjs
strawberry_django_hasura/: __init__.py  aggregation.py  comparisons.py  connection.py  filtering.py  grouping.py  inputs.py  mutations.py  naming.py  ordering.py  resource.py  run_query.py
tests/: conftest.py  demo_schema.py  models.py  settings.py  test_aggregate.py  test_crud.py  test_filtering.py  test_grouping.py  test_optimizer.py  test_resource_metadata.py  test_run_query.py  test_sdl_contract.py
